finished text block module

--- a/html/src/html/templates/index/template.hbs
+++ b/html/src/html/templates/index/template.hbs
@@ -14,6 +14,9 @@
 						<li style="margin-bottom: 5px;">
 							<a style="color: #151515;" href="ko-smo-mi.html">Ko smo mi?</a>
 						</li>
+						<li style="margin-bottom: 5px;">
+							<a style="color: #151515;" href="lice-ulice.html">Lice Ulice</a>
+						</li>
 					</ol>
 				</div>
 			</div>
