--- a/html/src/scss/modules/_page-intro.scss
+++ b/html/src/scss/modules/_page-intro.scss
@@ -35,6 +35,10 @@
 	align-items: center;
 }
 
+.page-intro__title {
+	max-width: 52%;
+}
+
 .page-intro__text {
 	max-width: 49%;
 	margin-bottom: 34px;
