--- a/html/src/html/modules/text-block/text-block.hbs
+++ b/html/src/html/modules/text-block/text-block.hbs
@@ -1,3 +1,9 @@
 <div class="text-block">
-	<h2>{{title}} - text-block</h2>
+	<div class="wrap wrap--medium">
+		<h3 class="h3 text-block__title">{{title}}</h3>
+		<div class="text-block__content">
+			<p class="text-block__text text-block__text--left">{{textLeft}}</p>
+			<p class="text-block__text text-block__text--right">{{textRight}}</p>
+		</div>
+	</div>
 </div>
