--- a/Patrija.Web/Views/Partials/NestedContent/_HomeIntro.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_HomeIntro.cshtml
@@ -4,7 +4,7 @@
 <div class="home-intro">
     <div class="wrap home-intro__wrap">
         <p class="home-intro__text">@Model.Title</p>
-		@Html.Partial("Link", Model.Link, new ViewDataDictionary(new { className = "btn" }))
+		@Html.Partial("Link", Model.Link, new ViewDataDictionary() { { "className", "btn" } })
         <div class="home-intro__image">
             <img src="@Model.Image.Url" alt="">
             <span class="home-intro__circle home-intro__circle--blue"></span>
