--- a/html/src/html/modules/project/project.hbs
+++ b/html/src/html/modules/project/project.hbs
@@ -1,5 +1,5 @@
 <div class="project">
-	<div class="wrap">
+	<div class="wrap wrap--medium">
 		<h2 class="h2 project__main-title">{{mainTitle}}</h2>
 		<div class="project__item project__item--normal">
 			<div class="project__item-content">
@@ -11,7 +11,8 @@
 				{{#if additionalImage}}
 				<img class="project__additional-image" src="{{additionalImage}}" alt="">
 				{{/if}}
-				<div class="project__img has-cover" style="background-image: url('{{image}}');"><div>
+				<div class="project__img has-cover" style="background-image: url('{{image}}');"></div>
+				<span class="circle circle--blue circle--large"></span>
 			</div>
 		</div>
 		<div class="project__item project__item--reverse">
@@ -24,10 +25,10 @@
 				{{#if additionalImageReverse}}
 				<img class="project__additional-image" src="{{additionalImageReverse}}" alt="">
 				{{/if}}
-				<div class="project__img has-cover" style="background-image: url('{{imageReverse}}');"><div>
+				<div class="project__img has-cover" style="background-image: url('{{imageReverse}}');"></div>
+				<span class="circle circle--mint circle--tiny"></span>
 			</div>
 		</div>
-		{{!-- <span class="circle circle--blue"></span> --}}
 	</div>
 </div>
 
