--- a/html/src/scss/modules/_project.scss
+++ b/html/src/scss/modules/_project.scss
@@ -7,4 +7,94 @@
 
 .project__main-title {
 	text-align: center;
+	margin-bottom: 196px;
+}
+
+.project__item {
+	position: relative;
+}
+
+.project__item--normal {
+	padding-left: 45.5%;
+	margin-bottom: 216px;
+}
+
+.project__item--reverse {
+	padding: 28px 0 0 7.5%;
+	margin-bottom: 200px;
+}
+
+.project__item-content {
+	padding-top: 112px;
+	max-width: 590px;
+}
+
+.project__title {
+	font-size: 40px;
+	line-height: 55px;
+	margin-bottom: 12px;
+}
+
+.project__text {
+	font-size: 18px;
+	line-height: 30px;
+	margin-bottom: 34px;
+}
+
+.project__image {
+	position: absolute;
+	top: 0;
+	&::after {
+		background-image: url('../assets/images/mask/project-mask-left.svg');
+		background-position: center center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display: block;
+	}
+}
+
+.project__image--normal {
+	left: 4.3%;
+	width: 34.183%;
+	padding-bottom: 27.748%;
+	.circle {
+		bottom: -10px;
+		left: 29%;
+	}
+}
+
+.project__image--reverse {
+	left: 58.1%;
+	width: 32.976%;
+	padding-bottom: 29.357%;
+	&::after {
+		background-image: url('../assets/images/mask/project-mask-right.svg');
+	}
+	.circle {
+		top: 9px;
+		left: 29.8%;
+	}
+}
+
+.project__img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.project__additional-image {
+	position: absolute;
+	top: 50%;
+	left: -4vw;
+	transform: translateY(-50%);
+	width: 39%;
+	z-index: 20;
 }
