--- a/html/src/html/templates/lice-ulice/template.hbs
+++ b/html/src/html/templates/lice-ulice/template.hbs
@@ -7,6 +7,8 @@
 			{{> page-intro pageIntro}}
 
 			{{> text-block textBlock}}
+
+			{{> simple-form simpleForm}}
 		</main>
 
 		{{> footer footer}}
