added image text module to template

--- a/html/src/html/templates/lice-ulice/template.hbs
+++ b/html/src/html/templates/lice-ulice/template.hbs
@@ -9,6 +9,8 @@
 			{{> text-block textBlock}}
 
 			{{> simple-form simpleForm}}
+
+			{{> image-text imageText}}
 		</main>
 
 		{{> footer footer}}
