added join us module to lice ulice page

--- a/html/src/html/templates/lice-ulice/template.hbs
+++ b/html/src/html/templates/lice-ulice/template.hbs
@@ -11,6 +11,8 @@
 			{{> simple-form simpleForm}}
 
 			{{> image-text imageText}}
+
+			{{> join-module joinUs}}
 		</main>
 
 		{{> footer footer}}
