--- a/html/src/scss/modules/_image-text.scss
+++ b/html/src/scss/modules/_image-text.scss
@@ -58,6 +58,7 @@
 
 .image-text__container--reverse {
 	padding: 0 30px;
+	margin-bottom: -245px;
 	.image-text__image {
 		order: 2;
 		margin-left: 18.6vh;
