--- a/Patrija.Web/Views/_Layout.cshtml
+++ b/Patrija.Web/Views/_Layout.cshtml
@@ -21,9 +21,9 @@
 @{
 	Html.RenderAction<LayoutController>(c => nameof(c.Header), new { viewModel = Model.Header });
 }
-<div>
+<main class="main">
 	@RenderBody()
-</div>
+</main>
 @{
 	Html.RenderAction<LayoutController>(c => nameof(c.Footer), new { viewModel = Model.Footer });
 }
