--- a/Patrija.Web/Views/Home.cshtml
+++ b/Patrija.Web/Views/Home.cshtml
@@ -1,5 +1,4 @@
 ﻿@inherits UmbracoViewPage<HomeViewModel>
-
 @{
     Html.RenderAction<NestedContentController>(c => nameof(c.HomeIntro), new { viewModel = Model.HomeIntro });
 }
@@ -17,4 +16,7 @@
 @if (Model.JoinUs != null)
 {
     Html.RenderAction<NestedContentController>(c => nameof(c.JoinUs), new { viewModel = Model.JoinUs });
+}
+@{ 
+    Html.RenderAction<NestedContentController>(c => nameof(c.AboutUs), new { viewModel = Model.AboutUs });
 }
