Home Support Feature finished.

--- a/Patrija.Web/Views/Partials/NestedContent/_HomeSupport.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_HomeSupport.cshtml
@@ -5,7 +5,7 @@
     <div class="wrap support__wrap">
         
         <div class="support__container">
-               *@foreach (SupportContentBoxViewModel supportContentBoxViewModel in Model.supportContentBoxViewModels)
+               @foreach (SupportContentBoxViewModel supportContentBoxViewModel in Model.supportContentBoxViewModels)
                 {
                     <div class="support__item">
                         <div class="support__item-content">
