added new template

--- a/html/src/html/templates/index/template.hbs
+++ b/html/src/html/templates/index/template.hbs
@@ -17,6 +17,9 @@
 						<li style="margin-bottom: 5px;">
 							<a style="color: #151515;" href="lice-ulice.html">Lice Ulice</a>
 						</li>
+						<li style="margin-bottom: 5px;">
+							<a style="color: #151515;" href="klub-kompas.html">Klub Kompas</a>
+						</li>
 					</ol>
 				</div>
 			</div>
