added text-image module

--- a/html/src/html/modules/text-image/text-image.hbs
+++ b/html/src/html/modules/text-image/text-image.hbs
@@ -1,3 +1,14 @@
 <div class="text-image">
-	<h2>{{title}} - text-image</h2>
+	<div class="wrap wrap--medium">
+		<div class="text-image__container">
+			<div class="text-image__image">
+				<div class="text-image has-cover" style="background-image: url('{{image}}')"></div>
+			</div>
+			<div class="text-image__content">
+				<h3 class="h3 text-image__title">{{title}}</h3>
+				<p class="text-image__text">{{text}}</p>
+				<a class="btn" href="javascript:;">{{link}}</a>
+			</div>
+		</div>
+	</div>
 </div>
