--- a/Patrija.Web/Views/AboutUsPage.cshtml
+++ b/Patrija.Web/Views/AboutUsPage.cshtml
@@ -1,5 +1,11 @@
 ﻿@inherits UmbracoViewPage<AboutUsPageViewModel>
 
-@{
+@if (Model.PageIntro != null)
+{
     Html.RenderAction<NestedContentController>(c => nameof(c.PageIntro), new { viewModel = Model.PageIntro });
+}
+
+@if (Model.ImageWithText != null)
+{
+    Html.RenderAction<NestedContentController>(c => nameof(c.ImageWithText), new { viewModel = Model.ImageWithText });
 }
