--- a/html/src/html/modules/donations/donations.hbs
+++ b/html/src/html/modules/donations/donations.hbs
@@ -1,3 +1,15 @@
 <div class="donations">
-	<h2>{{title}} - donations</h2>
+	<div class="wrap wrap--small">
+		<div class="donations__content">
+			<h3 class="h3 donations__title">{{title}}</h3>
+			<p class="donations__text">{{text}}</p>
+		</div>
+		<div class="donations__logos">
+			{{#each logo}}
+				<div class="donations__logo">
+					<img class="donations__logo-image" src="{{this.image}}" alt="">
+				</div>
+			{{/each}}
+		</div>
+	</div>
 </div>
