--- a/html/src/html/templates/index/template.hbs
+++ b/html/src/html/templates/index/template.hbs
@@ -20,6 +20,9 @@
 						<li style="margin-bottom: 5px;">
 							<a style="color: #151515;" href="klub-kompas.html">Klub Kompas</a>
 						</li>
+						<li style="margin-bottom: 5px;">
+							<a style="color: #151515;" href="kako-da-nas-podrzis.html">Kako da nas podržiš?</a>
+						</li>
 					</ol>
 				</div>
 			</div>
