Implemented Featured Projects on About Us page. Created ContaonerController and moved HomeSupport and FeaturedProjects in it.

--- a/Patrija.Web/Views/AboutUsPage.cshtml
+++ b/Patrija.Web/Views/AboutUsPage.cshtml
@@ -3,3 +3,7 @@
 @{
     Html.RenderAction<NestedContentController>(c => nameof(c.PageIntro), new { viewModel = Model.PageIntro });
 }
+
+@{
+    Html.RenderAction<ContainerController>(c => nameof(c.AboutUsProjectsContainer), new { viewModel = Model.FeaturedProjectsContainer });
+}
