--- a/Patrija.Web/Views/Partials/Shared/_SimpleForm.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_SimpleForm.cshtml
@@ -20,11 +20,11 @@
                         <input class="form__input" type="email" id="email" name="email">
                         <span class="form__error-message">@Model.EmailFieldError</span>
                     </div>
-                    @*<div class="form__row">
-                        <label class="form__label" for="message">{{labelMessage}}</label>
+                    <div class="form__row">
+                        <label class="form__label" for="message">@Model.CommentFieldText</label>
                         <textarea class="form__input form__input--textarea" id="message" name="message"></textarea>
-                        <span class="form__error-message">{{errorMessage}}</span>
-                    </div>*@
+                        <span class="form__error-message">@Model.CommentFieldError</span>
+                    </div>
                     <div class="form__row">
                         <button class="btn btn--mint btn--submit" type="submit">@Model.SubmitButtonText</button>
                     </div>
