--- a/html/src/html/templates/lice-ulice/template.hbs
+++ b/html/src/html/templates/lice-ulice/template.hbs
@@ -3,16 +3,22 @@
 
 		{{> header header}}
 
-		<main class="main">
+		<main class="main lice-ulice-page">
 			{{> page-intro pageIntro}}
 
 			{{> text-block textBlock}}
 
 			{{> simple-form simpleForm}}
 
+			{{> testimonials testimonials}}
+
 			{{> image-text imageText}}
 
 			{{> join-module joinUs}}
+
+			<div class="lice-ulice-shape">
+				<img src="assets/images/shapes/lice-ulice-shape.svg" alt="">
+			</div>
 		</main>
 
 		{{> footer footer}}
