--- a/html/src/scss/base/_typography.scss
+++ b/html/src/scss/base/_typography.scss
@@ -43,6 +43,10 @@
 	line-height: 30px;
 }
 
+.rte h1, .rte h2, .rte h3, .rte h4, .rte h5, .rte h6 {
+	margin-bottom: 14px;
+}
+
 p {
 	font-size: 18px;
 	font-weight: 300;
@@ -57,10 +61,15 @@ p {
 }
 
 .rte {
-	blockquote {
-		border-top: 1px solid $black;
-		border-bottom: 1px solid $black;
-		padding: 30px 0;
+	p {
+		font-size: 18px;
+		line-height: 35px;
+		margin-bottom: 25px;
+	}
+	img {
+		width: 100%;
+		border-radius: 10px;
+		margin-bottom: 52px;
 	}
 	ul {
 		padding-left: 20px;
