--- a/html/src/html/templates/index/template.hbs
+++ b/html/src/html/templates/index/template.hbs
@@ -24,7 +24,7 @@
 							<a style="color: #151515;" href="kako-da-nas-podrzis.html">Kako da nas podržiš?</a>
 						</li>
 						<li style="margin-bottom: 5px;">
-							<a style="color: #151515;" href="single-bio.html">Single bio</a>
+							<a style="color: #151515;" href="single-blog.html">Single bio</a>
 						</li>
 					</ol>
 				</div>
