--- a/html/src/scss/layout/_buttons.scss
+++ b/html/src/scss/layout/_buttons.scss
@@ -27,8 +27,10 @@ input[type='submit'] {
 	min-width: 206px;
 	border-radius: 24px;
 	text-align: center;
-	transition: $duration $ease;
 	display: inline-block;
+	.loaded & {
+		transition: $duration $ease;
+	}
 	@include hover {
 		box-shadow: 0 10px 16px rgba(39, 142, 208, 0.16);
 	}
