--- a/Patrija.Web/Views/Partials/Container/_AboutUsProjectsContainer.cshtml
+++ b/Patrija.Web/Views/Partials/Container/_AboutUsProjectsContainer.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Patrija.Core.ViewModels.Partials.AboutUsPage;
+@using Patrija.Core.ViewModels.Partials.Features;
 @inherits UmbracoViewPage<FeaturedProjectsContainerViewModel>
     
 <div class="project">
@@ -6,13 +7,16 @@
         <h2 class="h2 project__main-title">@Model.Title</h2>
         @foreach (FeatruedProjectViewModel featruedProjectViewModel in Model.featruedProjectViewModels)
         {
-            <div class="project__item @(featruedProjectViewModel.ContentPosition == "Left" ? "project__item--normal" : "project__item--reverse")">
+            var isLeft = featruedProjectViewModel.ContentPosition == ContentPosition.Left;
+            var itemClass = isLeft ? "project__item--normal" : "project__item--reverse";
+            var imageClass = isLeft ? "project__image--normal" : "project__image--reverse";
+            <div class="project__item @(itemClass)">
                 <div class="project__item-content">
                     <h2 class="h2 project__title">@featruedProjectViewModel.Title</h2>
                     <p class="project__text">@featruedProjectViewModel.Text</p>
                     <a class="btn" href="@featruedProjectViewModel.Link.Url">@featruedProjectViewModel.Link.Content</a>
                 </div>
-                <div class="project__image @(featruedProjectViewModel.ContentPosition == "Left" ? "project__image--normal" : "project__image--reverse")">
+                <div class="project__image @(imageClass)">
                     @if (featruedProjectViewModel.AdditionalImage != null)
                     {
                         <img class="project__additional-image" src="@featruedProjectViewModel.AdditionalImage" alt="">
