--- a/Patrija.Web/Views/Partials/NestedContent/_ImageWithText.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_ImageWithText.cshtml
@@ -1,4 +1,5 @@
-﻿@using Patrija.Core.ViewModels.Partials.Features
+﻿@using Patrija.Core.ViewModels.Partials.PageVariant1
+@using Patrija.Core.ViewModels.Partials.Features
 @inherits UmbracoViewPage<ImageWithTextViewModel>
     
 <div class="image-text">
