Added partials for testimonials and testimonials container

--- a/Patrija.Web/Views/SupportUs.cshtml
+++ b/Patrija.Web/Views/SupportUs.cshtml
@@ -2,5 +2,10 @@
 
 @if (Model.DonationForm != null)
 {
+    Html.RenderAction<NestedContentController>(c => nameof(c.TestimonialContainer), new { viewModel = Model.TestimonialsContainer });
+}
+
+@if (Model.DonationForm != null)
+{
     Html.RenderAction<NestedContentController>(c => nameof(c.SimpleForm), new { viewModel = Model.DonationForm });
 }
