added shapes to news details page

--- a/html/src/html/templates/single-blog/template.hbs
+++ b/html/src/html/templates/single-blog/template.hbs
@@ -8,8 +8,10 @@
 
 			{{> news-details newsDetails}}
 
-			<div class="single-blog-shape-blue"><img src="" alt=""></div>
-			<div class="single-blog-shape-mint"><img src="" alt=""></div>
+			<div class="circle circle--mint single-blog-circle-left"></div>
+			<div class="circle circle--large circle--blue single-blog-circle-right"></div>
+			<div class="single-blog-shape-blue"><img src="assets/images/shapes/single-blog-shape-01.svg" alt=""></div>
+			<div class="single-blog-shape-mint"><img src="assets/images/shapes/single-blog-shape-02.svg" alt=""></div>
 		</main>
 
 		{{> footer footer}}
