--- a/Patrija.Web/Views/Partials/NestedContent/_TextBlock.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_TextBlock.cshtml
@@ -1,4 +1,4 @@
-﻿@using Patrija.Core.ViewModels.Partials.PageVariant1
+﻿@using Patrija.Core.ViewModels.Partials.Features
 @inherits UmbracoViewPage<TextBlockViewModel>
 
 <div class="text-block">
