--- a/html/src/html/templates/index/template.hbs
+++ b/html/src/html/templates/index/template.hbs
@@ -26,6 +26,9 @@
 						<li style="margin-bottom: 5px;">
 							<a style="color: #151515;" href="single-blog.html">Single bio</a>
 						</li>
+						<li style="margin-bottom: 5px;">
+							<a style="color: #151515;" href="kontakt.html">Kontakt</a>
+						</li>
 					</ol>
 				</div>
 			</div>
