finished pridruzi nam se page

--- a/html/src/html/templates/index/template.hbs
+++ b/html/src/html/templates/index/template.hbs
@@ -29,6 +29,9 @@
 						<li style="margin-bottom: 5px;">
 							<a style="color: #151515;" href="kontakt.html">Kontakt</a>
 						</li>
+						<li style="margin-bottom: 5px;">
+							<a style="color: #151515;" href="pridruzi-nam-se.html">Pridruži nam se</a>
+						</li>
 					</ol>
 				</div>
 			</div>
