--- a/html/src/scss/modules/_contact-form.scss
+++ b/html/src/scss/modules/_contact-form.scss
@@ -10,7 +10,7 @@
 	line-height: 30px;
 	font-weight: 700;
 	margin-bottom: 10px;
-    display: block;
+	display: block;
 }
 
 .contact-form__address-details {
@@ -40,4 +40,5 @@
 
 .contact-form__form-title {
 	margin-bottom: 22px;
+	max-width: 384px;
 }
